repair overflow

--- a/style.css
+++ b/style.css
@@ -4,67 +4,70 @@
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --text-color: white;
   --background: url('./assets/bg-mobile.jpg');
   --stroke-color: rgba(255, 255, 255, 0.5);
-  --surface-color:rgba(255, 255, 255, 0.1);
-  --surface-color-hover:rgba(255, 255, 255, 0.5);
-  --highlight-color:rgba(255, 255, 255, 0.2);
+  --surface-color: rgba(255, 255, 255, 0.1);
+  --surface-color-hover: rgba(255, 255, 255, 0.5);
+  --highlight-color: rgba(255, 255, 255, 0.2);
   --button: url('./assets/moon-stars.svg');
 }
 
-.light{
+.light {
   --text-color: black;
   --background: url('./assets/bg-mobile-light.jpg');
   --stroke-color: rgba(0, 0, 0, 0.5);
-  --surface-color:rgba(0, 0, 0, 0.05);
-  --surface-color-hover:rgba(0, 0, 0, 0.02);
-  --highlight-color:rgba(0, 0, 0, 0.1);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(0, 0, 0, 0.1);
   --button: url('./assets/sun.svg');
 }
 
 body {
   background: var(--background) no-repeat top center/cover;
   height: 100vh;
+  overflow: hidden;
 }
 
-body *{
+body * {
   font-family: 'Inter', sans-serif;
   color: var(--text-color);
 }
 
 
-#container{
+#container {
   width: 100%;
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
 
-#profile{
+#profile {
   text-align: center;
   padding: 24px;
 }
 
-#profile img{
+#profile img {
   margin: auto;
   width: 112px;
 }
-#profile p{
+
+#profile p {
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
 }
+
 /*switch*/
 
-#switch{
+#switch {
   position: relative;
   width: 64px;
   margin: 4px auto;
 }
 
-#switch button{
+#switch button {
   width: 32px;
   height: 32px;
   background: white var(--button) no-repeat center;
@@ -80,13 +83,13 @@ body *{
   animation: slide-back 0.4s forwards;
 }
 
-.light #switch button{
+.light #switch button {
   animation: slide-in 0.4s forwards;
 }
 
-#switch button:hover{
+#switch button:hover {
   outline: 8px solid var(--highlight-color);
-  transition:0.2s;
+  transition: 0.2s;
 }
 
 #switch span {
@@ -101,7 +104,7 @@ body *{
 
 /*Links*/
 
-ul{
+ul {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -115,7 +118,7 @@ ul li a {
   align-items: center;
   padding: 16px 24px;
 
-  background:var(--surface-color);
+  background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
   backdrop-filter: blur(4px);
@@ -128,7 +131,7 @@ ul li a {
 
 /*pseudo-selector*/
 
-ul li a:hover{
+ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
   scale: 1.02;
@@ -143,7 +146,7 @@ ul li a:hover{
   font-size: 24;
 }
 
-#social a{
+#social a {
   align-items: center;
   justify-content: center;
   padding: 16px;
@@ -151,12 +154,12 @@ ul li a:hover{
   transition: background 0.2s;
 }
 
-#social a:hover{
+#social a:hover {
   background: var(--highlight-color);
 }
 
-footer{
-  padding:24px 0;
+footer {
+  padding: 24px 0;
   text-align: center;
   font-weight: normal;
   font-size: 14px;
@@ -164,22 +167,24 @@ footer{
 
 /*media queries*/
 
-@media (min-width: 700px){
-  :root{
+@media (min-width: 700px) {
+  :root {
     --background: url('./assets/bg-desktop.jpg');
   }
 
-  .light{
+  .light {
     --background: url('./assets/bg-desktop-light.jpg');
   }
 }
 
 /*animations*/
 
-@keyframes slide-in{
-  from{
+@keyframes slide-in {
+  from {
     left: 0;
-  }to{
+  }
+
+  to {
     left: 50%;
   }
 }
